--- a/properties/src/main/resources/application.properties
+++ b/properties/src/main/resources/application.properties
@@ -3,3 +3,8 @@ server.port=9090
 
 default.course.name=SAP HANA
 default.course.chapterCount=3
+
+course.name=AWS AND DOCKER
+course.chapterCount=3
+course.rating=5
+course.author=Bhupendra
